[stream-kraken] Fix unsubscribe message